# QWorkFlow

./: README.md
QWorkFlow/: CMakeLists.txt  README.md
QWorkFlow/include/: nodeItem.h
QWorkFlow/include/SupportLibs/: Color.hpp  GeneHash.hpp  Message.hpp  Messege.hpp  publicDefine.h
Test/SupportLibsTest/Color/: CmakeLists.txt
Test/SupportLibsTest/Color/src/: Color.cpp
Test/SupportLibsTest/Message/: CMakeLists.txt  run_test.cmd  run_test.sh
Test/SupportLibsTest/Message/src/: Message.cpp
Test/SupportLibsTest/include/: easyTest.hpp
